--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-slick": "^0.29.0",
     "rerousel": "^0.1.9",
     "slick-carousel": "^1.8.1"
