--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "@vercel/analytics": "^0.1.8",
     "bnc-onboard": "^1.39.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.3",
